# seal-rookery

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  __init__.py  convert_image_sizes.py  convert_images.py  ez_setup.py  index.html  pyproject.toml  requirements-ci.txt  requirements-dev.txt  seals.json  setup.py  test.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  pypi.yml  tests.yml
hooks/: post_push
seal_rookery/: __init__.py  _post_install.py  convert_images.py  find.py  search.py  upload_images.py
seal_rookery/seals/: README.md  seals.json
seal_rookery/www/: index.html
www/: index.html
